src/style/style.scss
//style.scss

//Imports
@import "./segmented-controls.css";
@import "./add_event.scss";
@import "./variables.scss";
@import "./user-profile.scss";
@import "./upload_image.scss";
@import "./event-page.scss";

html, body {
  font-family: 'Roboto', 'Old Standard TT', 'Times New Roman', Times, serif;
  margin: 0;
  padding: 0;
}

hr {
    border: 0;
    border-bottom: 1px solid $light-grey;
    padding: 0;
}


#main, .app-container {
  height: inherit;
  min-width: 768px;
}

.app-container {
  background-color: $light-grey;
}

// Top Navigation Bar
#nav-bar {
  background-color: white;
  color: $green;
  font-size: 30pt;
  height: 60px;
  line-height: $nav-bar-height;
  padding-left: 12px;
  padding-top: 10px;
  padding-right: 16px;
  position: relative;
  box-shadow: 0px 5px 10px -5px black;
  -webkit-box-shadow: 0px 5px 10px -5px black;
  -moz-box-shadow: 0px 5px 10px -5px black;

  @include flex-space-between;
  @include flex-box;

  // This is (currently) the dartmap logo in the nav bar
  h1 {
    display: inline-block;
    position: relative;
    left: 8px;
  }

  // This is (currently) the user's name from facebook in the nav bar
  h2 {
    display: inline-block;
    position: relative;
    right: 8px;
    color: #B3B3B3;
  }

  // This is (currently) the add event button
  #add-event-button {
    background-color: white;
    border: 1px solid;
    border-radius: 20px;
    float: right;
    font-size: 20pt;
    height: 100%;
    line-height: 100%;

    &:hover {
      background-color: $light-grey;
      cursor: pointer;
    }
  }

  #logo {
    height: $nav-bar-height;
    width: $nav-bar-height;
  }

  #fb-pic {
    border-radius: 50%;
    height: 35px;
    width: 35px;
    border: 1px solid #ddd;
    border-radius: 50%;
    box-shadow: 0px 0px 5px #000000;
  }

  .fb-user {
    background-color: #3b5998;
    border: 0px;
    color: white;
    font-family: 'Lucida Grande';
    font-size: 12px;
    float: right;
    height: 32px;
    line-height: 16px;
    margin-left: 8px;
    padding: 5px;
    &:hover {
      cursor: pointer;
      opacity: .8;
    }
  }
}

.nav-btn {
  color: black;
  text-decoration: none;
  cursor: pointer;

  &:hover, &:focus {
    color: black;
  }
}


// This is (currently) the add event button
.add-event-plus {
  background-color: white;
  border: 1px solid;
  border-radius: 20px;
  float: right;
  font-size: 20pt;
  height: 100%;
  line-height: 100%;
  margin-bottom: 10px;

  &:hover {
    background-color: $light-grey;
    cursor: pointer;
  }
}

#plus {
  height: 30px;
  width: 30px;
  margin-left: 20px;
}

// This is the div that encompasses everything that is not in the navigation bar
.home-container {
  height: 90%;
  background-color: white;
}

// Map Components
#map {
  float: left;
  padding: 5px;
  margin: 16px 16px 16px 16px;
  box-shadow: inset 0px 0px 10px rgba(0,0,0,0.8);
}

.event {
  border: 0px;
  background-color: $green;
  @include event-style;

  &:focus {
    outline: none;
  }
}

.event-hover {
  border: 0px;
  background-color: $light-grey;
  @include event-style;

  &:focus {
    outline: none;
  }
}

.map-event-img {
  height: 20px;
  width: 20px;
  position: relative;
}

.popup-icon {
  height: 20px;
  width: 20px;
  margin-right: 5px;
}

#event-menu {
  font-family: 'Roboto', 'Old Standard TT', 'Times New Roman', Times, serif;
  float: right;
  width: 20%;
  height: 100%;
  overflow: scroll;
  padding-right: 16px;
  padding-top: 16px;

  .location-not-selected {
    display: none;
  }
}

.warning-msg {
  background-color: white;
}

#search-bar {
  width: 100%;
  background-color: white;
}

.highlight {
  background-color: #fffd77;
}

#event-none {
  float: right;
  width: 20%;
  height: 100%;
  overflow: scroll;
  background-color: white;
  text-align: center;
  padding-right: 16px;
  padding-top: 16px;
}

// Event List Components
#event-menu #event-banner {
  border-bottom: thin solid black;
   .event-banner-item {
    float: left;
    padding-left: 16px;
  }
}

.event-item {
  background-color: white;
  border-bottom: thin solid black;
  height: 80px;
  padding-left: 8px;
  padding-top: 8px;
  width: 100%;
  font-size: 15px;

  &:hover {
    background-color: $light-grey;
    cursor: pointer;
  }
}

.popup {
  font-family: 'Roboto', 'Old Standard TT', 'Times New Roman', Times, serif;
  font-size: 1rem;
  background-color: white;
  border: 1px solid;
  border-color: $green;
  box-shadow: 0 0 8px 2px #888;
  color: black;
  padding: 5px;
  width: 250px;
  z-index: 15;
  @include flex-box;
  @include flex-column;
}

.description {
  width: 250px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#test-button {
  position: absolute;
  top: 10px;
}

// Filter Container
#filter-container {
  height: 20%;
  width: 75%;
  float: left;
  display: block;
  padding: 0 25px;

  #filter-btn {
    display: inline-block;
    background-color: orange;
    float: right;
  }
}
.date-filter, .time-filter, .category-filter {
  @include flex-space-around;
  @include flex-box;
}

.segmented-control {
  &:hover {
    background-color: #ccffcc;
    opacity: .5;
  }
}

//over-writing an issue with the rc-slider stylesheet
.rc-slider-step {
  margin: 0;
}

// Location Dialog
#location {
  border: 5px solid black;
  position: center;
  background-color: white;
  padding: 30px;
  border-radius: 50px;
  box-shadow: 0px 0px 20px black;
}

// Add Event Dialog
#add-event {
  border: 5px solid black;
  height: 80%;
  width: 80%;
  position: absolute;
  top: 10%;
  left: 10%;
  background-color: white;
  padding: 30px;
  border-radius: 50px;
  box-shadow: 0px 0px 20px black;
}

#close-button {
  position: absolute;
  right: 20px;
  top: 5px;
  &:hover {
    color: #DC143C;
    cursor: pointer;
  }
}
.add-event-top {
  height: 20%;
}

.add-event-form {
  height: 80%;
  @include flex-box;
  @include flex-column;
  @include flex-space-between;
}

.add-event-text {
  width: 50%;
  vertical-align: middle;
  height: 30px;
}

.add-event-loc-string {
  width: 150px;
}

.add-event-error-message {
  display: inline-block;
  width: 50%;
  vertical-align: middle;
  height: 30px;
}
.add-event-btns {
  display: inline-block;
  width: 100%;
  // align-self: flex-end;
  // -webkit-align-self: flex-end;
  // -moz-align-self: flex-end;
}
.add-event-btn {
  background-color: $green;
}

.back-btn {
  float: left;
}

.nxt-btn {
  float: right;
}

.invalid-nxt-btn {
  background-color: $light-grey;
}

.page-slider {
  @include flex-space-around;
  @include flex-box;
}

.icon-select {
  height: 30px;
  @include flex-box;
}

.selected-icon {
  height: 30px;
  width: 30px;
}

// Generic Classes
.hidden {
  display: none;
}

.date-display {
  background-color: $green;
  color: white;
  position: relative;
  text-align: center;
}

.name {
  font-size: 13.1pt;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.atrribute {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.error-msg {
  color: red;
}

.error-box {
  border-color: red;
}

.close-button {
  align-self: flex-end;
  align-self: -webkit-flex-end;
  align-self: -moz-flex-end;
  &:hover {
    color: #DC143C;
    cursor: pointer;
  }
}

.Modal {
  border: 5px solid black;
  position: absolute;
  text-align: center;
  top:40%;
  left:40%;
  width: 20%;
  height: 20%;
  background-color: white;
  padding: 30px;
  border-radius: 50px;
}

